--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@ Currently only Windows version of the IDE is supported.</p>
 
 <p>Find where your Arduino IDE stores its sketchbook
 </p>
-<img src="./images/arduino_prefs.jpg"/>
+<img src="/ESP8266_ArduinoIDE/images/arduino_prefs.jpg"/>
 
 <p>Download the repo as archive and unpack it to hardware subfolder of Arduino's sketchbook location. Alternatively clone repository into the hardware subfolder.
 </p>
-<img src="./images/sketchbook_folder.jpg"/>
+<img src="/ESP8266_ArduinoIDE/images/sketchbook_folder.jpg"/>
 
 <p>After that start Arduino IDE. You should see ESP8266 in boards menu available for selection:
 </p>
-<img src="./images/ESP8266_board.jpg"/>
+<img src="/ESP8266_ArduinoIDE/images/ESP8266_board.jpg"/>
 
 <p>If you don't see the board then you probably unpacked package into wrong location.</p>
 <h2>
